--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -25,8 +25,7 @@ concurrency:
   cancel-in-progress: false
 
 env:
-  BUILD_PATH: "./wiki" # default value when not using subfolders
-  # BUILD_PATH: subfolder
+  BUILD_PATH: "./wiki" 
 
 jobs:
   build:
