--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "astro/tsconfigs/strict",
+  "extends": "astro/tsconfigs/base",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    },
-    "strictNullChecks": true
+      "@*": ["./src/*"]
+    }
   }
 }
+
