--- a/website/package.json
+++ b/website/package.json
@@ -6,18 +6,19 @@
     "astro": "astro",
     "start": "astro dev",
     "dev": "astro dev",
-    "build": "astro check && astro build",
+    "check": "astro check",
+    "build": "astro build",
     "preview": "astro preview"
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
-    "@astrojs/mdx": "^2.1.0",
+    "@astrojs/node": "^8.2.0",
     "@astrojs/rss": "^4.0.4",
     "@astrojs/sitemap": "^3.0.5",
-    "@astrojs/vercel": "^7.0.2",
-    "sass": "^1.70.0",
-    "astro": "^4.2.6",
+    "@astrojs/svelte": "^5.0.3",
     "autoprefixer": "^10.4.17",
-    "typescript": "^5.3.3"
+    "astro": "^4.3.2",
+    "sass": "^1.70.0",
+    "undici": "^6.6.0"
   }
 }
