--- a/api/package.json
+++ b/api/package.json
@@ -22,15 +22,12 @@
     "#db/*": "./src/database/*.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-handlebars": "^7.1.2",
     "express-rate-limit": "^7.0.0",
     "helmet": "^7.0.0",
     "joi": "^17.12.2",
@@ -39,17 +36,16 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.4.5",
     "nodemailer": "^6.9.13",
-    "request": "^2.88.2",
     "sequelize": "^6.32.1",
     "uuid": "^9.0.0",
     "winston": "^3.12.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kettraworld/api"
+    "url": "https://github.com/kettraworld/kettraworld.github.io"
   },
   "bugs": {
-    "url": "https://github.com/kettraworld/api/issues"
+    "url": "https://github.com/kettraworld/kettraworld.github.io/issues"
   },
   "engines": {
     "node": ">=20.0.0"
