--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,8 @@
     "#middleware/*": "./src/middleware/*.js",
     "#functions/*": "./src/functions/*.js",
     "#controllers/*": "./src/controllers/*.js",
+    "#email": "./src/email/config.js",
+    "#email/*": "./src/email/template/*.js",
     "#routes/*": "./src/routes/*.js",
     "#nlogin": "./src/nlogin/lib/login.js",
     "#model/*": "./src/database/models/*.js",
@@ -35,6 +37,7 @@
     "mercadopago": "^2.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.4.5",
+    "nlogin-js": "^2.0.1",
     "nodemailer": "^6.9.13",
     "sequelize": "^6.32.1",
     "uuid": "^9.0.0",
