--- a/website/manifest.json
+++ b/website/manifest.json
@@ -1,6 +1,16 @@
 {
-  "theme_color": "#8a2be2",
-  "background_color": "#483d8b",
+  "id": "kettraworld.github.io",
+  "lang": "pt-BR",
+  "name": "Kettra World",
+  "short_name": "Kettra World",
+  "start_url": "index.html",
+  "scope": "index.html",
+  "description": "Aplicativo usado pelos jogadores do servidor",
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
+  "orientation": "any",
+  "display": "fullscreen",
+  "dir": "auto",
   "icons": [{
     "purpose": "maskable",
     "sizes": "512x512",
@@ -13,17 +23,7 @@
       "src": "src/images/icon-192x192.png",
       "type": "image/png"
     }],
-  "orientation": "any",
-  "display": "fullscreen",
-  "dir": "auto",
-  "lang": "pt-BR",
-  "name": "Kettra World",
-  "short_name": "Kettra World",
-  "start_url": "index.html",
-  "scope": "index.html",
   "related_applications": [{
     "platform": "web"
-  }],
-  "description": "Aplicativo usado pelos jogadores do servidor",
-  "id": "kettraworld.github.io"
+  }]
 }
