--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -4,7 +4,7 @@ name: Deploy
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["kettraworld"]
+    branches: ["website"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
